# proj.podcast_server.python

./: .gitattributes  .gitignore  README.md  automation_service.db  credentials.template.md
AI/: technical_notes.md  (+4 more)
automation-service/: .env.docker.example  .env.example  Dockerfile  README.md  automation_service_local.db  docker-compose.yml  pyproject.toml
automation-service/automation_service/: config.py  crud.py  database.py  main.py  models.py  pipeline_runner.py  queue_runner.py  scheduler.py  schemas.py
automation-service/automation_service/api/routes/: castopod.py  channels.py  jobs.py  pipeline.py  playlists.py  runs.py  schedules.py
automation-service/tests/: conftest.py  test_api.py
pipeline/: README.md  pyproject.toml
pipeline/downloads/channel/말씀의 식탁/: 20250908_말씀의 식탁 ｜ 역대기상 제1장 [하루 한 장 역대기상 묵상] 한글킹제임스성경 (2025.9.9.) ｜ 자유침례교회 김기준 목사.info.json  20250909_말씀의 식탁 ｜ 역대기상 제2장 [하루 한 장 역대기상 묵상] 한글킹제임스성경 (2025.9.10.) ｜ 자유침례교회 김기준 목사.info.json  20250910_말씀의 식탁 ｜ 역대기상 제3장 [하루 한 장 역대기상 묵상] 한글킹제임스성경 (2025.9.11.) ｜ 자유침례교회 김기준 목사.info.json  20250911_말씀의 식탁 ｜ 역대기상 제4장 [하루 한 장 역대기상 묵상] 한글킹제임스성경 (2025.9.12.) ｜ 자유침례교회 김기준 목사.info.json  20250915_말씀의 식탁 ｜ 역대기상 제5장 [하루 한 장 역대기상 묵상] 한글킹제임스성경 (2025.9.16.) ｜ 자유침례교회 김기준 목사.info.json  20250916_말씀의 식탁 ｜ 역대기상 제6장 [하루 한 장 역대기상 묵상] 한글킹제임스성경 (2025.9.17.) ｜ 자유침례교회 김기준 목사.info.json  20250917_말씀의 식탁 ｜ 역대기상 제7장 [하루 한 장 역대기상 묵상] 한글킹제임스성경 (2025.9.18.) ｜ 자유침례교회 김기준 목사.info.json  NA_말씀의 식탁⧸ 하루 한 장 역대기상 묵상.info.json  (+22 more)
pipeline/pipeline_client/: client.py
pipeline/pipeline_client/tui/: __init__.py  app.py
pipeline/pipeline_runner/: __init__.py  artwork.py  castopod.py  main.py
pipeline/tests/: test_artwork.py  test_client.py
(+26 files in other folders)
